<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:onClick="onClick"                
    android:clickable="true"
    android:weightSum="10">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:gravity="center"
    />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:id="@+id/version"
        android:text=""
        android:textColor="#FFFFFF"
        android:gravity="left"
    />
    
    <ImageView
        android:contentDescription="@string/plateau"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="30dp"
    	android:src="@drawable/ic_launcher"
    />
    
    <blink
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="2">
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/touchText"
	        android:textColor="#FFFFFF"
	        android:gravity="center"
	    />
	</blink>

</LinearLayout>
